# claude-credit-audit

./: .gitattributes  .gitignore  LICENSE  README.md  README_zh_CN.md  SKILL.md  cost-audit.cmd  cost-audit.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cost_audit/: __init__.py  calibrate.py  cli.py  estimator.py  i18n.py  reporter.py  scanner.py
src/cost_audit/data/: billing_rules.yaml  pricing.yaml
tests/: conftest.py  test_calibrate.py  test_cli.py  test_estimator.py  test_i18n.py  test_indirect.py  test_prefilter_guard.py  test_reporter.py  test_scanner.py
tests/fixtures/indirect-repo/.github/workflows/: var.yml
tests/fixtures/indirect-repo/scripts/: install.sh
tests/fixtures/indirect-repo/src/: spawn.ts
tests/fixtures/logs/: sess_a.jsonl  sess_b.jsonl  sess_c.jsonl
tests/fixtures/sample-repo/.github/workflows/: issue-bot.yml  matrix.yml  nightly.yml  pr-check.yml
tests/fixtures/sample-repo/scripts/: agent.py  edge.sh
