[project]
name = "claude-credit-audit"
version = "0.1.1"
description = "Forecast which agent calls burn Anthropic Claude Agent SDK credit after the 2026-06-15 billing change — Claude Code / claude-code-action / claude -p cost, monthly risk, and cheaper alternatives."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "frankguo" }]
keywords = [
  "claude", "claude-code", "claude-code-action", "claude-code-skill",
  "anthropic", "agent-sdk", "agent-sdk-credit", "credit", "cost",
  "claude-code-cost", "billing", "finops", "github-actions", "ci",
  "audit", "claude-skill", "headless",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/frankguodev/claude-credit-audit"
Issues = "https://github.com/frankguodev/claude-credit-audit/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.scripts]
claude-credit-audit = "cost_audit.cli:main"
cost-audit = "cost_audit.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cost_audit = ["data/*.yaml", "py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # 翻译表/长模板字符串行不强制换行，保持现有风格
